bugfixes and realign about header

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -388,8 +388,8 @@ h5{
                 position:relative;
                 h1{
                     transition:background 1s;
-                    margin-left:-1.3em;
-                    margin-top:-0.8em;
+                    margin-left:0em;
+                    margin-top:-0.2em;
                     display:inline-block;
                     padding:0.4em;
                     line-height:0.7em;
